# scRNAsim-toolz

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  environment-dev.yml  environment.yml  link to deepnote.txt  pylint.cfg  requirements.txt  setup.py  test_output.gtf
.github/: pull_request_template.md
Inputs_files/: mini_file.txt
cdna_generator/: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  Untitled.ipynb  cdna.ipynb  copy_numbers.csv  exampleInput.sh  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py
input_files/: expression.csv  test.gtf
priming_site_predictor/: .gitlab-ci.yml  Example_GTF_Output.GTF  LICENSE  PrimingSitePredictor_main_1.0.0.py  README.md  setup.py
read_sequencer/: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.txt  README.md  requirements-dev.txt  requirements.txt  setup.py
scRNAsim_toolz/: version.py
scripts/: Excecution_file.py  (+19 more)
transcript_structure_generator/: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  LICENSE.md  README.md  Trans_Struc_Gen.nf  environment.yml  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.py
transcript_structure_generator/Images/: AF_Introduction_Git_Completion.docx  AF_Screenshot_Markdown_Completion.docx
transcript_structure_generator/src/: __init__.py  main.py
transcript_structure_generator/tests/: __init__.py  test_main.py
transcript_structure_generator/tests/resources/: Annotation1.gtf  Annotations2.gtf  Transcript2.tsv
transcript_structure_generator/tsg/: __init__.py  __main__.py  cli.py  main.py
(+236 files in other folders)
